[project]
name = "arielbot"
version = "0.4.9"
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Polyisoprene", email = "lzxder@outlook.com" },
]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0,<0.22",
    "click>=8.1.7,<9",
    "dynrender-skia>=0.2.9,<0.3",
    "fastapi>=0.111.0,<0.112",
    "nb-cli>=1.7.2,<2",
    "nonebot-adapter-onebot>=2.4.6,<3",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-apscheduler>=0.5.0,<0.6",
    "nonebot-plugin-uninfo>=0.11.0",
    "nonebot2>=2.4.4,<3",
    "pycryptodome>=3.21.0,<4",
    "pypng>=0.20220715.0,<0.20220716",
    "qrcode>=8.0,<9",
]

[project.scripts]
ariel = "arielbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arielbot"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
